# QA_GURU_BELEVTSEVA_HW_21

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_api_petstore.py  test_demo.py  test_division.py  test_subtraction.py
